# witness-angel-components

./: .gitignore  LICENSE.txt  README.rst  Readme.rst  pyproject.toml  scratch.py  setup.cfg  update_i18n.sh
install/: compile-ffmpeg.sh
src/wacomponents/: __init__.py  default_settings.py  i18n.py  launcher.py  recording_toolchain.py  system_permissions.py  utilities.py
src/wacomponents/application/: __init__.py  _app_presetup.py  _common_runtime_support.py  android_helpers.py  generic_gui.py  recorder_gui.py  recorder_service.py
src/wacomponents/assets/: __init__.py
src/wacomponents/devices/: __init__.py  gpio_buttons.py  keyboard_codes.py
src/wacomponents/locale/: __init__.py
src/wacomponents/logging/: crashdumps.py  formatters.py  handlers.py
src/wacomponents/screens/: authenticator_creation_form.kv  authenticator_creation_form.py  authenticator_management.kv  authenticator_management.py  authenticator_publication_form.kv  authenticator_publication_form.py  authenticator_remote_decryption_request.kv  authenticator_remote_decryption_request.py  authenticator_revelation_request_detail.kv  authenticator_revelation_request_detail.py  authenticator_revelation_request_management.kv  authenticator_revelation_request_management.py  authenticator_synchronization_form.kv  authenticator_synchronization_form.py  base.py  claimant_revelation_request_creation_form.kv  claimant_revelation_request_creation_form.py  claimant_revelation_request_detail.kv  claimant_revelation_request_detail.py  claimant_revelation_request_management.kv  claimant_revelation_request_management.py  cryptainer_decryption.kv  cryptainer_decryption.py  cryptainer_decryption_process.kv  cryptainer_decryption_process.py  cryptainer_decryption_result.kv  cryptainer_decryption_result.py  cryptainer_storage_management.kv  cryptainer_storage_management.py  decryption_request_form.kv  decryption_request_form.py  decryption_request_list.kv  decryption_request_list.py  foreign_keystore_management.kv  foreign_keystore_management.py  imported_keystore_management.kv  imported_keystore_management.py  recorder_homepage.kv  recorder_homepage.py  revelation_request_error_report.kv  (+1 more)
src/wacomponents/service_control/: __init__.py  _android_service_controller.py  _base_service_controller.py  _osc_transport.py  _subprocess_service_controller.py
src/wacomponents/utilities/: __init__.py
src/wacomponents/widgets/: layout_components.kv  layout_components.py  logging_console.kv  (+4 more)
src/waguilib/: android_helpers.py  background_service.py  common_app_support.py  common_presetup.py  gpio_buttons.py  i18n.py  key_codes.py  kivy_presetup.py  launcher.py  recording_toolchain.py  safe_launcher.py  system_permissions.py  utilities.py
tests/: _scaffolding_utilities.py  test_wasensorlib_camera_rtsp_stream.py
(+70 files in other folders)
