[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "wacomponents"
description = "Witness Angel Components"
version = "0.1"
license = { file = "LICENSE.txt" }
readme = "Readme.rst"
authors = ["Pascal Chambon", "Francinette Atchade"]
homepage = "https://witnessangel.com/"
repository = "https://github.com/WitnessAngel/witness-angel-components"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Operating System :: MacOS :: MacOS X",
]
packages = [
    { include = "wacomponents", from = "src" },
]
include = ["README.rst"]
exclude = []

[tool.poetry.dependencies]
python = ">=3.7, <4.0"
# For now, let final projects install what they need, by themselves
# We'll need lots of "extras" definitions to handle all use cases of this set of components
